@@ -1,3 +1,5 @@
+-Fixed olayer2 types
+
 1.6.16
 -Fixed leaflet point icon
 
